--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ div>div {
 }
 
 section {
-  background-color: lime;
   margin: 20px;
 }
 
@@ -22,4 +21,20 @@ img {
 
   width: 200px;
   height: 200px;
+}
+
+button {
+  margin-left: 20px;
+  border-radius: 30px;
+  padding: 10px 30px;
+  background: crimson;
+  color: white;
+  border: none;
+}
+
+button:hover {
+  cursor: pointer;
+  background: white;
+  color: crimson;
+  box-shadow: 0 0 20px crimson;
 }
